# snyk-migrate-to-github-app

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
snyk_migrate_to_github_app/: __init__.py  __main__.py  main.py
